--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
                     technologies. I build projects that solve real-world problems and constantly challenge myself to
                     grow as a developer.
                 </p>
+                <p class="hero-email">
+                    📧 <a href="mailto:hemant@hemantjha.me">hemant@hemantjha.me</a>
+                </p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
